[tool.poetry]
name = "renovate-mypy-boto3-repo"
version = "0.1.0"
description = ""
authors = ["Johannes Wienke <johannes.wienke@plan.one>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy-boto3-kms = "^1.17.54"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
