[tool.poetry]
name = "renovate-mypy-boto3-repo"
version = "0.1.0"
description = ""
authors = ["Johannes Wienke <johannes.wienke@plan.one>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3-stubs = {extras = ["s3"], version = "^1.16.39"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
